--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,14 +1,10 @@
-<<<<<<< HEAD
-# Node modules
-node_modules/
-=======
-# Dependencies
+# Node modules / dependencies
 /node_modules
 
 # Environment variables
 .env
+.env.local
 .env.*.local
->>>>>>> main
 
 # Logs
 logs
@@ -18,34 +14,18 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-<<<<<<< HEAD
-# Environment variables
-.env
-.env.local
-.env.*.local
-
 # Build output (if using Babel/TypeScript)
-dist/
-build/
+/dist
+/build
 
 # Coverage (from tests)
-coverage/
+/coverage
 
-=======
->>>>>>> main
 # Runtime data
 pids
 *.pid
 *.seed
 *.pid.lock
-
-<<<<<<< HEAD
-# Editor / IDE settings
-=======
-# Coverage & build outputs
-/coverage
-/build
-/dist
 
 # Cache
 .npm
@@ -55,15 +35,11 @@ pids
 out
 
 # IDE / Editor settings
->>>>>>> main
 .vscode/
 .idea/
 *.swp
 *.swo
-<<<<<<< HEAD
 *.swn
-=======
->>>>>>> main
 *.bak
 
 # OS-specific files
@@ -71,14 +47,10 @@ out
 Thumbs.db
 
 # Temporary files
-<<<<<<< HEAD
 *.tgz
 *.zip
 *.tar.gz
-
-# Uploads (if your backend handles file uploads)
-
-=======
 *.tmp
 *.temp
->>>>>>> main
+
+# Uploads (if your backend handles file uploads)
